<resources>
    <string name="app_name">PhoenixIV</string>
    <string name="image">image</string>
    <string name="download">Download</string>
    <string name="display">Display</string>
    <string name="read">Read</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="add_manga">Add Manga</string>
    <string name="manga_url">Manga URL</string>
    <string name="manga_name">Manga Name</string>
    <string name="css_query">Css query</string>
    <string name="delete">Delete</string>
    <string name="load_csv">Load CSV</string>
    <string name="csv_path">CSV path</string>
    <string name="csv_open">CSV open</string>
    <string name="init_csv">Init CSV</string>
</resources>